apps/auth/manifests/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-forward-auth
  namespace: auth
spec:
  forwardAuth:
    address: http://traefik-forward-auth.auth.svc:4181
    authResponseHeaders:
      - X-Forwarded-User
