apps/auth/manifests/04_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: oauth2-proxy
    app.kubernetes.io/version: 6.1.1
  name: oauth2-proxy
  namespace: auth
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: oauth2-proxy
      app.kubernetes.io/version: 6.1.1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: oauth2-proxy
        app.kubernetes.io/version: 6.1.1
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values: ["oauth2-proxy"]
              topologyKey: kubernetes.io/hostname
      containers:
      - args:
        - --provider=google
        - --email-domain=krupa.net.pl
        - --cookie-domain=.ankhmorpork.thaum.xyz
        - --whitelist-domain=.ankhmorpork.thaum.xyz
        - --pass-host-header=true
        #- --set-authorization-header=true
        # - --pass-authorization-header=true
        - --set-xauthrequest=true
        #- --pass-user-headers=true
        - --pass-basic-auth=false
        #- --reverse-proxy=true
        - --http-address=0.0.0.0:4180
        image: quay.io/paulfantom/oauth2-proxy:6.1.1
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          name: proxy
        resources:
          requests:
            memory: 15Mi
