apps/auth/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/name: oauth2-proxy
    app.kubernetes.io/part-of: auth
    app.kubernetes.io/version: 7.4.0
  name: oauth2-proxy
  namespace: auth
spec:
  clusterIP: None
  ports:
  - name: http
    port: 4180
    targetPort: http
  - name: metrics
    port: 8080
    targetPort: metrics
  selector:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/name: oauth2-proxy
    app.kubernetes.io/part-of: auth
