apps/auth/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/name: oauth2-proxy
    app.kubernetes.io/part-of: auth
    app.kubernetes.io/version: 7.3.0
  name: oauth2-proxy
  namespace: auth
spec:
  rules:
  - host: auth.ankhmorpork.thaum.xyz
    http:
      paths:
      - backend:
          service:
            name: oauth2-proxy
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - auth.ankhmorpork.thaum.xyz
    secretName: oauth2-proxy-tls
